2007-03-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-setColor:state): Always call cairo_set_source_rgba().
	* Source/cairo/CairoGState.m (-GSReadRect:): Correct placement of rectangle.
	* Source/cairo/CairoGState.m (-compositerect:op:): Use
	cairo_paint() instead of cairo_fill().

2007-03-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: A complete rewrite, now path and
	transformation handling from the super class get used.
	* Source/cairo/CairoFontInfo.m (-setupAttributes:,
	-drawGlyphs:length:on:): Don't invert the font matrix.
	* Source/gsc/GSGState.m (-DPSrectclip::::, -DPSrectfill::::,
	-DPSrectstroke::::): Use NSBezierPath to get correct results when rotated.

2007-03-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGDragView.m (GSActionForDragOperation,
	GSDragOperationForAction): Completed and corrected drag type
	mapping between xdnd and OpenStep. NSDragOperationAll should now
	be map back correctly when converted to xdnd and back again.

2007-03-07 Xavier Glattard <xavier.glattard@online.fr>

	* Source/win32/Event_format.sed,
	* Source/win32/GSDisplayServer_details.m,
	* Source/win32/RELEASE_NOTES,
	* Source/win32/w32_config.h,
	* Source/win32/w32_debug.m,
	* Source/win32/w32_notifications.m: Delete files.
	* Source/win32/WIN32Server.m (and other files):
	Deletion of all non-GNUstep debug stuff (printf...)
	Deletion of all Notification hooks (used for a debugging purpose)
	Deletion of the Application preference Panel that pops up the 1st
	time you run _any_ application. 
	Deletion of the check of GSWINHandlesWindowDecorations and 
	GSWIN32HandlesWindowDecorations options (none worked because of a
	typo and are now deprecated). Use of GSBackHandlesWindowDecorations 
	option like X11 backend instead of GSUseWMStyles (marked as deprecated).
	Use of GSBackUsesNativeTaskbar option instead of GSUseWMTaskbar
	(marked as deprecated)
	All these options are read in -initWithAttribute: (no more in