@@ -1,5 +1,10 @@
 2007-03-21 Fred Kiefer <FredKiefer@gmx.de>
 
+	* Source/cairo/CairoGState.m: General clean-up and optimisation of
+	this class.
+
+2007-03-21 Fred Kiefer <FredKiefer@gmx.de>
+
 	* Source/cairo/CairoGState.m (-setColor:state): Always call cairo_set_source_rgba().
 	* Source/cairo/CairoGState.m (-GSReadRect:): Correct placement of rectangle.
 	* Source/cairo/CairoGState.m (-compositerect:op:): Use
